--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,14 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    -->
+    <script
+      src="https://kit.fontawesome.com/9bb006a46f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Frontend Developer UI/UX Designer South Africa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    -->
   </body>
 </html>
