fixing website title

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Frontend Developer UI/UX Designer South Africa</title>
+    <title>Developer UI/UX Designer South Africa</title>
   </head>
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
